--- a/CSS/style.css
+++ b/CSS/style.css
@@ -278,3 +278,21 @@ header {
 .examples-card:hover {
     box-shadow: 0 0 10px #888;
 }
+
+/* Cta Section */
+
+.cta-section-container {
+    flex-direction: column;
+    gap: 30px;
+    color: #fff;
+}
+
+.cta-section-container p {
+    color: #fff;
+    margin-top: 20px;
+}
+
+.cta-section {
+    padding: 120px var(--padding-inline-section) 80px;
+    background-color: #183b54;
+}
