--- a/CSS/style.css
+++ b/CSS/style.css
@@ -211,6 +211,10 @@ header {
     text-align: center;
 }
 
+.features-card img {
+    width: 60px;
+}
+
 /* Big Features Section */
 
 .big-features-section {
@@ -295,4 +299,33 @@ header {
 .cta-section {
     padding: 120px var(--padding-inline-section) 80px;
     background-color: #183b54;
+}
+
+/* footer */
+
+footer {
+    padding-block: 80px;
+    background-color: #ebf2fa;
+}
+
+.footer-container {
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.link-column {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+/* subfooter */
+.subfooter {
+    background-color: #b9cde4;
+    padding: var(--padding-inline-section);
+}
+
+.subfooter-container {
+    justify-content: center;
+    gap: 30px;
 }
